Moved Pipfile[.lock] to Tooling.

--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,1 @@
-[[source]]
-url = "https://pypi.org/simple"
-verify_ssl = true
-name = "pypi"
-
-[packages]
-yamlfix = "*"
-yamllint = "*"
-
-[dev-packages]
-
-[requires]
+Tooling/Pipfile
