--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "."
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "prettier": "2.8.7"
+  }
 }
