--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -34,6 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: grigorye/ge-workflows:latest
+      options: --user root
     steps:
       - name: Checkout
         uses: actions/checkout@v1
